# tinyaudio

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
android-examples/: Cargo.toml  README.md
android-examples/src/: lib.rs
examples/: init.rs  sine.rs
ios-example/: README.md
ios-example/Rust-TinyAudioExample/: Cargo.toml  audio.h
ios-example/Rust-TinyAudioExample/src/: lib.rs
ios-example/TinyAudioExample/: Audio-Bridging-Header.h  RustGreetings.swift
ios-example/TinyAudioExample/TinyAudioExample/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ios-example/TinyAudioExample/TinyAudioExample.xcodeproj/: project.pbxproj
ios-example/TinyAudioExample/TinyAudioExampleTests/: TinyAudioExampleTests.swift
ios-example/TinyAudioExample/TinyAudioExampleUITests/: TinyAudioExampleUITests.swift  TinyAudioExampleUITestsLaunchTests.swift
src/: aaudio.rs  alsa.rs  coreaudio.rs  directsound.rs  lib.rs  opensles.rs  pulse.rs  web.rs
wasm-examples/: Cargo.toml  README.md  main.js
wasm-examples/src/: lib.rs  utils.rs
