[package]
name = "tinyaudio"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["android-examples", "wasm-examples"]

# Make sure the separate examples (i.e. for Android or WebAssembly) will use the crate optimized.
[profile.dev.package."*"]
opt-level = 3

[target.'cfg(target_os = "android")'.dependencies]
aaudio = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3.9", features = ["minwindef", "winnt", "windef", "winuser", "dsound", "synchapi", "winbase" ] }

[target.'cfg(all(target_os = "unknown", target_arch = "wasm32"))'.dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"

[target.'cfg(all(target_os = "unknown", target_arch = "wasm32"))'.dependencies.web-sys]
version = "0.3.61"
features = [
    "Request",
    "Window",
    "Response",
    "AudioContext",
    "AudioBuffer",
    "AudioContextOptions",
    "AudioNode",
    "AudioBufferSourceNode",
    "AudioDestinationNode"
]

[target.'cfg(target_os = "linux")'.dependencies]
alsa-sys = { version = "0.3.1" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
coreaudio-sys = { version = "0.2.8" }
core-foundation-sys = { version = "0.8.2" }