[package]
name = "wasm-examples"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(all(target_os = "unknown", target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2.84"
tinyaudio = { path = "../" }

[target.'cfg(all(target_os = "unknown", target_arch = "wasm32"))'.dev-dependencies]
wasm-bindgen-test = "0.2"